--- a/Assets/Base.lproj/Main.storyboard
+++ b/Assets/Base.lproj/Main.storyboard
@@ -34,6 +34,84 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="124" y="27"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xzF-Ya-Ly9">
+            <objects>
+                <navigationController id="tNG-3d-9dJ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Sk8-ab-Q3c">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="sVC-if-I3w" kind="relationship" relationship="rootViewController" id="Coj-hc-Hpb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3gS-qW-mAs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="818" y="27"/>
+        </scene>
+        <!--Photo Album View Controller-->
+        <scene sceneID="b8T-He-xZR">
+            <objects>
+                <viewController id="sVC-if-I3w" customClass="PhotoAlbumViewController" customModule="VirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sta-Pq-uSn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JaY-i2-RRe">
+                                <rect key="frame" x="0.0" y="64" width="375" height="160"/>
+                            </mapView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zcf-TW-IoR">
+                                <rect key="frame" x="0.0" y="225" width="375" height="222"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="10L-W4-erY">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoAlbumViewCell" id="djM-lN-15l">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HsX-Jc-FUo">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="HsX-Jc-FUo" secondAttribute="bottom" id="1GY-Hr-TFc"/>
+                                            <constraint firstItem="HsX-Jc-FUo" firstAttribute="leading" secondItem="djM-lN-15l" secondAttribute="leading" id="ARd-Dr-xrC"/>
+                                            <constraint firstAttribute="trailing" secondItem="HsX-Jc-FUo" secondAttribute="trailing" id="Er9-Cj-ejC"/>
+                                            <constraint firstItem="HsX-Jc-FUo" firstAttribute="top" secondItem="djM-lN-15l" secondAttribute="top" id="uYm-7e-d5P"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Zcf-TW-IoR" firstAttribute="top" secondItem="JaY-i2-RRe" secondAttribute="bottom" id="8Ro-3m-qYA"/>
+                            <constraint firstItem="Zcf-TW-IoR" firstAttribute="trailing" secondItem="XP6-Je-ri3" secondAttribute="trailing" id="AJC-D5-ABJ"/>
+                            <constraint firstItem="JaY-i2-RRe" firstAttribute="leading" secondItem="XP6-Je-ri3" secondAttribute="leading" id="Aps-dk-MjE"/>
+                            <constraint firstItem="JaY-i2-RRe" firstAttribute="top" secondItem="XP6-Je-ri3" secondAttribute="top" id="OD7-qd-69f"/>
+                            <constraint firstItem="JaY-i2-RRe" firstAttribute="trailing" secondItem="XP6-Je-ri3" secondAttribute="trailing" id="arO-KY-Tkt"/>
+                            <constraint firstItem="Zcf-TW-IoR" firstAttribute="leading" secondItem="XP6-Je-ri3" secondAttribute="leading" id="fHe-kw-Ugv"/>
+                            <constraint firstItem="XP6-Je-ri3" firstAttribute="bottom" secondItem="Zcf-TW-IoR" secondAttribute="bottom" id="xer-bQ-k0R"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="XP6-Je-ri3"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="3kJ-Su-0uK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RIt-5m-iVY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1536.8" y="26.53673163418291"/>
         </scene>
     </scenes>
 </document>
