--- a/Assets/Base.lproj/Main.storyboard
+++ b/Assets/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tNG-3d-9dJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Vpy-5o-uB3">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -31,6 +31,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="2Jo-pO-ism"/>
+                    <connections>
+                        <outlet property="mapView" destination="Vpy-5o-uB3" id="uo4-Pv-bfL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -45,12 +49,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="sVC-if-I3w" kind="relationship" relationship="rootViewController" id="Coj-hc-Hpb"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Upq-Gc-IS8"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3gS-qW-mAs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="818" y="27"/>
+            <point key="canvasLocation" x="-684" y="27"/>
         </scene>
         <!--Photo Album View Controller-->
         <scene sceneID="b8T-He-xZR">
@@ -64,7 +68,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="160"/>
                             </mapView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zcf-TW-IoR">
-                                <rect key="frame" x="0.0" y="225" width="375" height="222"/>
+                                <rect key="frame" x="0.0" y="225" width="375" height="442"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="10L-W4-erY">
                                     <size key="itemSize" width="100" height="100"/>
@@ -73,7 +77,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoAlbumViewCell" id="djM-lN-15l">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCell" id="djM-lN-15l" userLabel="PhotoCell" customClass="PhotoCell" customModule="VirtualTourist" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -91,8 +95,15 @@
                                             <constraint firstAttribute="trailing" secondItem="HsX-Jc-FUo" secondAttribute="trailing" id="Er9-Cj-ejC"/>
                                             <constraint firstItem="HsX-Jc-FUo" firstAttribute="top" secondItem="djM-lN-15l" secondAttribute="top" id="uYm-7e-d5P"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="PhotoAlbumImageView" destination="HsX-Jc-FUo" id="E5E-vp-pcU"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="sVC-if-I3w" id="lN9-nR-ixu"/>
+                                    <outlet property="delegate" destination="sVC-if-I3w" id="hUi-UV-J6W"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -108,10 +119,15 @@
                         <viewLayoutGuide key="safeArea" id="XP6-Je-ri3"/>
                     </view>
                     <navigationItem key="navigationItem" id="3kJ-Su-0uK"/>
+                    <connections>
+                        <outlet property="collectionView" destination="Zcf-TW-IoR" id="vkb-St-JvC"/>
+                        <outlet property="flowLayout" destination="10L-W4-erY" id="chL-Ha-lvj"/>
+                        <outlet property="mapView" destination="JaY-i2-RRe" id="PQt-UL-ODb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RIt-5m-iVY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1536.8" y="26.53673163418291"/>
+            <point key="canvasLocation" x="912.79999999999995" y="26.53673163418291"/>
         </scene>
     </scenes>
 </document>
