--- a/Assets/Base.lproj/Main.storyboard
+++ b/Assets/Base.lproj/Main.storyboard
@@ -68,6 +68,7 @@
                         <outlet property="deleteBannerConstraint" destination="uOs-6d-nuo" id="RHl-n6-1UR"/>
                         <outlet property="editButton" destination="lKw-5u-GRG" id="Xyf-Yc-C2k"/>
                         <outlet property="mapView" destination="Vpy-5o-uB3" id="uo4-Pv-bfL"/>
+                        <segue destination="sVC-if-I3w" kind="show" identifier="SegueToPhotoAlbum" id="6de-tD-2fh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -77,7 +78,7 @@
                     </connections>
                 </pongPressGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="80.799999999999997" y="26.53673163418291"/>
+            <point key="canvasLocation" x="97" y="27"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="xzF-Ya-Ly9">
@@ -166,7 +167,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RIt-5m-iVY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="884" y="27"/>
+            <point key="canvasLocation" x="898" y="27"/>
         </scene>
     </scenes>
 </document>
