--- a/Assets/Base.lproj/Main.storyboard
+++ b/Assets/Base.lproj/Main.storyboard
@@ -104,11 +104,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JaY-i2-RRe">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JaY-i2-RRe">
                                 <rect key="frame" x="0.0" y="64" width="375" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="nPx-jg-y6s"/>
+                                </constraints>
                             </mapView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zcf-TW-IoR">
-                                <rect key="frame" x="0.0" y="225" width="375" height="442"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zcf-TW-IoR">
+                                <rect key="frame" x="0.0" y="224" width="375" height="443"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="10L-W4-erY">
                                     <size key="itemSize" width="100" height="100"/>
@@ -136,7 +139,7 @@
                                             <constraint firstItem="HsX-Jc-FUo" firstAttribute="top" secondItem="djM-lN-15l" secondAttribute="top" id="uYm-7e-d5P"/>
                                         </constraints>
                                         <connections>
-                                            <outlet property="PhotoAlbumImageView" destination="HsX-Jc-FUo" id="E5E-vp-pcU"/>
+                                            <outlet property="photoAlbumImageView" destination="HsX-Jc-FUo" id="6Re-6q-7rF"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
